cabal-version:      3.0
name:               johann
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Viktor Kronvall
maintainer:         viktor.kronvall@gmail.com
-- copyright:
category:           Sound
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable johann
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0, gloss
    hs-source-dirs:   app
    default-language: Haskell2010
